tests/snapshots/examples_fixtures/type_system__failing__42_handle_unknown_effect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/42_handle_unknown_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: println.

  examples/type_system/failing/42_handle_unknown_effect.flx:4:13
  |
4 |     let _ = 1 handle Console {
  |             ^
  |             - handled expression

Hint:
  Add 1 arm(s) to the handle block:

    println(resume, _arg1) -> resume(())

Tip: `resume(())` consumes the operation and discards its effect; use it when the handler only cares about observing the call.
== stdout ==
<not executed>
